--- a/app-test/src/app/views/pages/home/home.component.html
+++ b/app-test/src/app/views/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<section>
+    <div class="card container style-card">        
+        <div class="card-body">          
+          <h3 class="style-title">App Tests Module</h3>
+          <img class="style-logo" src="../../../../assets/images/logo.JPG" alt="Logomarca">
+        </div>      
+    </div>
+  </section>
