--- a/app-test/src/app/views/components/header/header.component.html
+++ b/app-test/src/app/views/components/header/header.component.html
@@ -1,1 +1,31 @@
-<p>header works!</p>
+<section>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark style-navbar">
+      <!-- Brand -->
+      <span class="navbar-brand">App Tests Module</span>
+      <!-- Toggler/collapsibe Button -->
+      <button class="navbar-toggler style-toggler-navbar" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <!-- Navbar links -->
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/lists">Lists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/ivamgf/App-Test-Module-Repository/blob/master/README.md" target="_blank">Documentation</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/contact">Contacts</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+</section>
