--- a/app-test/src/app/views/pages/splash/splash.component.html
+++ b/app-test/src/app/views/pages/splash/splash.component.html
@@ -1,1 +1,9 @@
-<p>splash works!</p>
+<section>
+  <div class="card container style-spinner">
+      <h3 class="style-title">App Tests Module</h3>
+      <img class="style-logo" src="../../../../assets/images/logo.JPG" alt="Logomarca">
+      <div class="card-body">          
+          <p-progressSpinner [style]="{width: '80px', height: '80px'}" strokeWidth="8" fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+      </div>      
+  </div>
+</section>
