--- a/app-test/src/app/views/components/footer/footer.component.html
+++ b/app-test/src/app/views/components/footer/footer.component.html
@@ -1,8 +1,14 @@
-<section>
-  <div class="col-12">
-    <p class="style-text1-footer">Design By Ivam Galvão Filho.</p>    
+<section class="">
+  <div class="row container style-footer">
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><a class="text-link" href="https://github.com/ivamgf/App-Test-Module-Repository/blob/master/README.md" target="_blank">Documentation</a></li>
+      <li class="list-group-item"><a class="text-link" href="https://github.com/ivamgf/App-Test-Module-Repository/blob/master/LICENSE" target="_blank">License</a></li>      
+    </ul>
+    
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item"><i>Design by Ivam Galvão Filho</i></li>
+        <li class="list-group-item"><i>Powered By Angular 8 and Nodejs</i></li>
+      </ul>
   </div>
-  <div class="col-12">
-    <p class="style-text2-footer">Powered By Angular 8.</p>
-  </div>   
+    
 </section>
