--- a/app-test/src/app/views/components/footer/footer.component.scss
+++ b/app-test/src/app/views/components/footer/footer.component.scss
@@ -1,34 +1,25 @@
-.style-text1-footer {
-  font-style: italic;
-  margin-top: 5%;
-  color: white;
-  float: left;
-  font-size: 12px;
+.list-group-item {
+  background-color: hsl(0, 0%, 24%);
+  color: white;  
 }
-.style-text2-footer {
-  font-style: italic;
-  margin-top: 5%;
+.text-link {
   color: white;
-  float: right;
-  font-size: 12px;
+}
+.style-footer {
+  margin: 5%;
+  padding-left: 20%;
 }
 @media only screen and (max-width: 768px) and (min-width: 576px) {
-  .style-text2-footer {
-    font-style: italic;
+  .style-footer {
     margin-top: 5%;
-    color: white;
-    float: right;
-    font-size: 12px;
-    margin-right: 5%;    
+    margin-bottom: 5%;
+    margin-left: 0%;
   }
 }
 @media only screen and (max-width: 576px){
-  .style-text2-footer {
-    font-style: italic;
+  .style-footer {
     margin-top: 5%;
-    color: white;
-    float: right;
-    font-size: 12px;
-    margin-right: 2%;
+    margin-bottom: 5%;
+    margin-left: 0%;
   }
 }
