--- a/app-test/src/app/views/pages/about/about.component.html
+++ b/app-test/src/app/views/pages/about/about.component.html
@@ -1,12 +1,39 @@
 <section>
   <br>
+  
+  <div class="card mb-3 style-card-about container" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="/assets/images/Ivam.jpg" class="card-img" alt="Card image">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Ivam Galvão Filho - Analista Desenvolvedor Front-End Angular</h5>
+          <p class="card-text">
+            Analista Desenvolvedor Front-End Angular, 9º melhor desenvolvedor de Typescript em Florianópolis,
+            293º melhor desenvolvedor de Typescript do Brasil, segundo análise da empresa americana CodersRank.io.
+            Atualmente faço parte dos Top 2% melhores desenvolvedores do mundo em um ranking de 18 milhões.
+            Desenvolvedor de sistemas pleno com certificação Scrum SFC e conhecimentos em Angular JS e Angular 8,
+            HTML5, CSS3, Javascript, TypeScript, Jquery, Graduando de Análise e Desenvolvimento de Sistemas pela
+            Faculdade Estácio de Sá e escritor.
+          </p>
+          <p class="card-text"><small class="text-muted">
+            <a href="https://www.linkedin.com/in/ivam-galv%C3%A3o-filho-0218b9b0/" target="_blank" class="btn btn-primary">
+              Ver Meu Perfil Completo no Linkedin
+            </a>
+          </small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <div class="card style-card-about-mob container">
       <img class="card-img-top style-img-card" src="/assets/images/Ivam.jpg" alt="Card image">
       <div class="card-body">
       <h4 class="card-title">Ivam Galvão Filho</h4>
       <h5 class="card-text">Analista Desenvolvedor Front-End Angular</h5>
       <p class="card-text style-text">
-          Analista Desenvolvedor Front-End Angular, 11º melhor desenvolvedor de Typescript em Florianópolis,
+          Analista Desenvolvedor Front-End Angular, 9º melhor desenvolvedor de Typescript em Florianópolis,
           293º melhor desenvolvedor de Typescript do Brasil, segundo análise da empresa americana CodersRank.io.
           Atualmente faço parte dos Top 2% melhores desenvolvedores do mundo em um ranking de 18 milhões.
           Desenvolvedor de sistemas pleno com certificação Scrum SFC e conhecimentos em Angular JS e Angular 8,
