--- a/app-test/src/app/views/components/footer/footer.component.scss
+++ b/app-test/src/app/views/components/footer/footer.component.scss
@@ -6,7 +6,8 @@
   color: white;
 }
 .style-footer {
-  margin: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
   padding-left: 20%;
 }
 @media only screen and (max-width: 768px) and (min-width: 576px) {
