--- a/app-test/src/app/views/pages/lists/lists.component.html
+++ b/app-test/src/app/views/pages/lists/lists.component.html
@@ -1,9 +1,40 @@
 <section>
+  
+    <p-toast></p-toast>
+
+  <!-- The Modal -->
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Atenção!</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body">
+            <strong>Você confirma a exclusão de usuário?</strong><br><br>
+            Para confirmar a operação clique em excluir!<br>
+            Para cancelar a operação, clique em cancelar!
+        </div>
+  
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="showSuccess()">Excluir</button>
+        </div>
+  
+      </div>
+    </div>
+  </div>
+
   <div class="style-accordion">
       <div class="accordion container" id="accordionExample">
-          <button type="button" class="btn btn-info style-btn-plus"><i class="fas fa-plus"></i></button>
-          <div class="card bg-info shadow p-1 mb-5 rounded">
-            <div class="card-header" id="headingOne">
+          <button type="button" class="btn btn-primary style-btn-plus"><i class="fas fa-plus"></i></button>
+          <div class="card bg-primary shadow p-1 mb-5 rounded">
+            <div class="card-header text-white" id="headingOne">
 
               <div class="media">
                 <div class="media-body">
@@ -15,7 +46,7 @@
 
               <h2 class="mb-0">
                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  <div class="style-text-btn"><span class="badge badge-dark">Ver mais...</span></div>
+                  <div class="style-text-btn"><span class="badge badge-light">Ver mais...</span></div>
                 </button>
               </h2>
             </div>
@@ -34,11 +65,13 @@
                 </div>
                 <div class="style-group-btn">
                   <button type="button" class="btn btn-warning style-group-btn"><i class="fas fa-recycle"></i></button>
-                  <button type="button" class="btn btn-danger style-group-btn"><i class="far fa-trash-alt"></i></button>
-                </div>                
+                  <button type="button" class="btn btn-danger style-group-btn" data-toggle="modal" data-target="#myModal">
+                    <i class="far fa-trash-alt"></i>
+                  </button>
+                </div>
               </div>
             </div>
-          </div>          
-        </div>        
-  </div>  
+          </div>
+        </div>
+  </div>
 </section>
