--- a/app-test/src/app/views/pages/update/update.component.scss
+++ b/app-test/src/app/views/pages/update/update.component.scss
@@ -1,3 +1,10 @@
 section {
   background-color: white;
 }
+.style-form {
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+.style-btn {
+  margin-right: 2%;
+}
