--- a/app-test/src/app/views/pages/lists/lists.component.html
+++ b/app-test/src/app/views/pages/lists/lists.component.html
@@ -32,8 +32,8 @@
 
   <div class="style-accordion">
       <div class="accordion container" id="accordionExample">
-          <button type="button" class="btn btn-primary style-btn-plus" (click)="registerUser()"><i class="fas fa-plus"></i></button>
-          <div class="card bg-primary shadow p-1 mb-5 rounded">
+          <button type="button" class="btn btn-info style-btn-plus" (click)="registerUser()"><i class="fas fa-plus"></i></button>
+          <div class="card bg-info shadow p-1 mb-5 rounded">
             <div class="card-header text-white" id="headingOne">
 
               <div class="media">
