--- a/app-test/src/app/views/pages/splash/splash.component.html
+++ b/app-test/src/app/views/pages/splash/splash.component.html
@@ -4,6 +4,7 @@
       <img class="style-logo" src="../../../../assets/images/logo.JPG" alt="Logomarca">
       <div class="card-body">          
           <p-progressSpinner [style]="{width: '80px', height: '80px'}" strokeWidth="8" fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
-      </div>      
+      </div>
+      <h4 class="card-title">Carregando...</h4>      
   </div>
 </section>
