--- a/app-test/src/app/views/components/footer/footer.component.html
+++ b/app-test/src/app/views/components/footer/footer.component.html
@@ -6,9 +6,11 @@
     </ul>
     
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><i>Design by Ivam Galvão Filho</i></li>
-        <li class="list-group-item"><i>Powered By Angular 8 and Nodejs</i></li>
-      </ul>
-  </div>
-    
+      <li class="list-group-item"><i>Design by Ivam Galvão Filho</i></li>
+    </ul>
+
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><i>Powered By Angular 8 and Nodejs</i></li>
+    </ul>
+  </div>    
 </section>
