--- a/app-test/src/app/views/pages/update/update.component.html
+++ b/app-test/src/app/views/pages/update/update.component.html
@@ -1,27 +1,58 @@
 <section>
-  <div class="container">
+
+  <p-toast></p-toast>
+
+  <div id="spinner" class="card container style-card-spinner">
+    <div class="card-body">
+      <h4 class="card-title">Atualizando...</h4>
+      <div class="style-spinner container">
+        <p-progressSpinner [style]="{width: '80px', height: '80px'}" strokeWidth="8" fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+      </div>
+    </div>
+  </div>
+
+  <div id="form" class="container">
     <div class="style-form">
-        <form>
-          <h3>Atualizar Usuário</h3>
-          <div class="form-group">
-            <label for="usr">Nome:</label>
-            <input type="text" class="form-control" id="usr">
+      <form [formGroup]="formUpdate">
+        <h3>Atualizar dados do Usuário</h3>
+        <label for="usr">Nome:</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-user"></i></span>
           </div>
-          <div class="form-group">
-            <label for="tel">Telefone:</label>
-            <input type="tel" class="form-control" id="tel">
+          <input type="text" class="form-control" id="user" formControlName="name" required>
+        </div>
+
+        <label for="telephone">Telefone:</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-phone"></i></span>
           </div>
-          <div class="form-group">
-            <label for="email">E-mail:</label>
-            <input type="email" class="form-control" id="email">
+          <input type="text" [textMask]="{mask: maskPhone}" class="form-control" id="telephone" formControlName="telephone" required>
+        </div>
+
+        <label for="email">Email:</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
           </div>
-          <div class="form-group">
-            <label for="whats">Whats:</label>
-            <input type="tel" class="form-control" id="whats">
+          <input id="email" type="email" class="form-control"
+          formControlName="email" placeholder="Digite seu e-mail!" required>
+        </div>
+
+        <label for="whats">Whats:</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-phone"></i></span>
           </div>
-          <button type="button" class="btn btn-danger style-btn" (click)="cancelUp()">Cancelar</button>
-          <button type="button" class="btn btn-success">Atualizar</button>
-        </form>
+          <input type="text" [textMask]="{mask: maskPhone}" class="form-control" id="whats" formControlName="whats" required>
+        </div>
+
+        <button type="button" class="btn btn-danger style-btn" (click)="cancelUp()">Cancelar</button>
+        <button type="button" class="btn btn-success" (click)="update()">Atualizar</button>
+      </form>
     </div>
   </div>
 </section>
+
+
