--- a/app-test/src/app/views/components/header/header.component.html
+++ b/app-test/src/app/views/components/header/header.component.html
@@ -17,6 +17,12 @@
             <a class="nav-link" href="#" routerLink="/lists">Lists</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/finance">Finances</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/indicators">Indicators</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#" routerLink="/about">About</a>
           </li>
           <li class="nav-item">
