--- a/app-test/src/app/views/pages/finance/finance.component.html
+++ b/app-test/src/app/views/pages/finance/finance.component.html
@@ -1,7 +1,7 @@
 <section>
-  <div class="card container style-card">        
-      <div class="card-body">          
-        <h3 class="style-title">Finance</h3>
-      </div>      
+  <div class="card container style-card">
+      <div class="card-body">
+        <h3 class="style-title">Indicadores Financeiros</h3>
+      </div>
   </div>
 </section>
