--- a/app-test/src/app/views/pages/indicators/indicators.component.html
+++ b/app-test/src/app/views/pages/indicators/indicators.component.html
@@ -1,1 +1,7 @@
-<p>indicators works!</p>
+<section>
+  <div class="card container style-card">
+      <div class="card-body">
+        <h3 class="style-title">Indicadores Econômicos</h3>
+      </div>
+  </div>
+</section>
