--- a/app-test/src/app/views/components/header/header.component.html
+++ b/app-test/src/app/views/components/header/header.component.html
@@ -6,7 +6,7 @@
       <button class="navbar-toggler style-toggler-navbar" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-  
+
       <!-- Navbar links -->
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
@@ -14,19 +14,19 @@
             <a class="nav-link" href="#" routerLink="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/lists">Lists</a>
+            <a class="nav-link" href="#" routerLink="/lists">Listas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/finance">Finances</a>
+            <a class="nav-link" href="#" routerLink="/finance">Finanças</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/indicators">Indicators</a>
+            <a class="nav-link" href="#" routerLink="/indicators">Indicadores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/about">About</a>
+            <a class="nav-link" href="#" routerLink="/about">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/contact">Contacts</a>
+            <a class="nav-link" href="#" routerLink="/contact">Contatos</a>
           </li>
         </ul>
       </div>
