--- a/app-test/src/app/views/pages/home/home.component.html
+++ b/app-test/src/app/views/pages/home/home.component.html
@@ -1,8 +1,33 @@
 <section>
-  <div class="card container style-card">        
-      <div class="card-body">          
+  <div class="card container style-card">
+      <div class="card-body">
         <h3 class="style-title">App Tests Module</h3>
         <img class="style-logo" src="../../../../assets/images/logo.JPG" alt="Logomarca">
-      </div>      
+      </div>
+      <div class="card style-card-weather">
+        <div class="card-body">
+          <h4 class="card-title">Precisão do Tempo</h4>
+          <p class="card-text"><i class="fas fa-city"></i> {{city}}</p>
+          <p class="card-text"><i class="fas fa-calendar-week"></i> {{date}}</p>
+          <p class="card-text"><i class="fas fa-clock"></i> {{time}}</p>
+
+          <!-- Alerts weather -->
+          <p id="cloud" class="style-card-cloud"><i class="fas fa-cloud"></i></p>
+          <p id="cloudDay" class="style-card-cloudDay"><i class="fas fa-cloud"></i></p>
+          <p id="sun" class="style-card-sun"><i class="fas fa-sun"></i></p>
+          <p id="rain" class="style-card-rain"><i class="fas fa-cloud-showers-heavy"></i></p>          
+          <p id="clear-night" class="style-card-clear-night"><i class="fas fa-moon"></i></p>
+          <p id="cloudly-night" class="style-card-cloudly-night"><i class="fas fa-cloud-moon"></i></p>          
+          <p id="storm" class="style-card-storm"><i class="fas fa-poo-storm"></i></p>
+          <p id="fog" class="style-card-fog"><i class="fas fa-smog"></i></p>
+          <p id="hail" class="style-card-hail"><i class="fas fa-cloud-sun"></i></p>
+          <p id="snow" class="style-card-snow"><i class="fas fa-snowflake"></i></p>
+          <p id="error" class="style-card-error"><i class="fas fa-frown"></i></p>
+          <!-- Alerts weather -->
+
+          <p class="card-text">{{description}}</p>
+          <p class="card-text"><i class="fas fa-wind"></i> {{windSpeedy}}</p>
+        </div>
+      </div>
   </div>
 </section>
