--- a/app-test/src/app/views/pages/home/home.component.scss
+++ b/app-test/src/app/views/pages/home/home.component.scss
@@ -1,6 +1,6 @@
 section {
   background-color: white;
-  
+
 }
 .style-title {
   text-align: center;
@@ -24,38 +24,47 @@ section {
 .style-card-cloud {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-sun {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-rain {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-storm {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-fog {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-hail {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-clear-night {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-cloudly-night {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-snow {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-error {
   position: absolute;
@@ -64,8 +73,10 @@ section {
 .style-card-cloudDay {
   position: absolute;
   text-align: center;
+  color: Dodgerblue;
 }
 .style-card-weather {
   margin-top: 5%;
   margin-bottom: 10%;
+  color: Dodgerblue;
 }
