--- a/app-test/src/app/views/pages/finance/finance.component.scss
+++ b/app-test/src/app/views/pages/finance/finance.component.scss
@@ -1,6 +1,5 @@
 section {
   background-color: white;
-  height: 400px;
 }
 .style-title {
   text-align: center;
@@ -9,9 +8,42 @@ section {
 .style-card {
   float: center;
   position: relative;
-  width: 300px;
+  width: 80%;
   text-align: center;
   margin-top: 5%;
   margin-bottom: 5%;
   border: 0px;
+}
+.style-card-finance {
+  margin-top: 3%;
+  margin-bottom: 10%;
+  margin-left: 5%;
+  position: relative;
+  float: left;
+  width: 25%;
+}
+.style-card-title {
+  color: white;
+}
+@media only screen and (max-width: 768px) and (min-width: 576px) {
+  .style-card-finance {
+    margin-top: 3%;
+    margin-bottom: 10%;
+    margin-left: 5%;
+    color: Dodgerblue;
+    position: relative;
+    float: left;
+    width: 40%;
+  }
+}
+@media only screen and (max-width: 576px){
+  .style-card-finance {
+    margin-top: 3%;
+    margin-bottom: 10%;
+    margin-left: 5%;
+    color: Dodgerblue;
+    position: relative;
+    float: left;
+    width: 90%;
+  }
 }
