--- a/app-test/src/app/views/pages/indicators/indicators.component.scss
+++ b/app-test/src/app/views/pages/indicators/indicators.component.scss
@@ -1,6 +1,5 @@
 section {
   background-color: white;
-  height: 400px;
 }
 .style-title {
   text-align: center;
@@ -14,4 +13,8 @@ section {
   margin-top: 5%;
   margin-bottom: 5%;
   border: 0px;
+}
+.style-accordion {
+  padding-top: 5%;
+  padding-bottom: 2%;
 }
