--- a/app-test/src/app/views/pages/indicators/indicators.component.html
+++ b/app-test/src/app/views/pages/indicators/indicators.component.html
@@ -4,4 +4,46 @@
         <h3 class="style-title">Indicadores Econômicos</h3>
       </div>
   </div>
+
+  <!-- Card Accordion -->
+  <div class="style-accordion" *ngFor="let indicator of indicatorsAnos">
+    <div class="accordion container" id="accordionExample">
+        <div class="card bg-info shadow p-1 mb-5 rounded">
+          <div class="card-header text-white" id="headingOne">
+
+            <div class="media">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">Indicadores Econômicos:</h5>
+                <span><i class="fas fa-calendar-week"></i> {{indicator.Ano}}</span>
+              </div>
+            </div>
+
+            <h2 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <div class="style-text-btn"><span class="badge badge-light">Ver mais...</span></div>
+              </button>
+            </h2>
+          </div>
+
+          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body bg-light">
+              <h3>Indicadores Econômicos {{indicator.Ano}}</h3>
+              <div>
+                  <span><i class="fas fa-chart-bar"></i> PIB: {{indicator.PIB}} %</span>
+              </div>
+              <div>
+                <span><i class="fas fa-chart-line"></i> IPCA: {{indicator.IPCA}} %</span>
+              </div>
+              <div>
+                <span><i class="fas fa-money-check-alt"></i> Salário Médio: R$ {{indicator.salarioMedio}}</span>
+              </div>
+              <div>
+                <span><i class="fas fa-money-check-alt"></i> Cesta Básica: R$ {{indicator.cestaBasica}}</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  <!-- Card Accordion -->
 </section>
