--- a/app-test/src/app/views/pages/indicators/indicators.component.html
+++ b/app-test/src/app/views/pages/indicators/indicators.component.html
@@ -5,6 +5,12 @@
       </div>
   </div>
 
+  <!-- Grafiq -->
+  <div class="container">
+    <p-chart type="bar" [data]="data"></p-chart>
+  </div>
+  <!-- Grafiq -->
+
   <!-- Card Accordion -->
   <div class="style-accordion" *ngFor="let indicator of indicatorsAnos">
     <div class="container">
