--- a/app-test/src/app/views/pages/indicators/indicators.component.html
+++ b/app-test/src/app/views/pages/indicators/indicators.component.html
@@ -7,7 +7,7 @@
 
   <!-- Grafiq -->
   <div class="container">
-    <p-chart type="bar" [data]="data"></p-chart>
+    <p-chart type="line" [data]="data"></p-chart>
   </div>
   <!-- Grafiq -->
 
